Add another linux bot for pin-based tests.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1469 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -8,7 +8,8 @@ c = BuildmasterConfig = {}
 
 from buildbot.buildslave import BuildSlave
 c['slaves'] = [BuildSlave('bot1name', 'bot1pazzwd'),
-               BuildSlave('bot2name', 'bot2pazzwd')]
+               BuildSlave('bot2name', 'bot2pazzwd'),
+               BuildSlave('bot3name', 'bot3pazzwd')]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave('bot1name', 'bot1passwd', max_builds=2)]
@@ -37,7 +38,9 @@ from buildbot.scheduler import Scheduler
 c['schedulers'] = []
 c['schedulers'].append(Scheduler(name='all', branch=None,
                                  treeStableTimer=10,
-                                 builderNames=['buildbot-linux', 'buildbot-windows']))
+                                 builderNames=['buildbot-linux',
+                                               'buildbot-windows',
+                                               'buildbot-linux-pin']))
 
 
 ####### BUILDERS
@@ -88,9 +91,10 @@ def addBuildTestStep(factory, os, bits, opt, static, test_base_name='racecheck_u
 
 
 def addTestStep(factory, debug, mode, test_binary, test_desc,
-                frontend_binary=None, env={}, extra_args=[], frontend='valgrind'):
+                frontend_binary=None, extra_args=[], frontend='valgrind', pin_root=None):
   """Adds a step for running unit tests with tsan."""
   args = []
+  env = {}
   desc = []
 
   if frontend == 'valgrind':
@@ -106,7 +110,8 @@ def addTestStep(factory, debug, mode, test_binary, test_desc,
     args.append(tool_arg)
 
   if frontend == 'pin':
-    env['PIN_ROOT'] = 'c:/pin'
+    if pin_root:
+      env['PIN_ROOT'] = pin_root
     env['TS_ROOT'] = 'tsan'
 
   if mode == 'phb':
@@ -180,9 +185,9 @@ variants = [((  64,   1, False),(        True, 'fast')),
             ((  64,   0, False),(        True, 'slow')),
             ((  64,   1, False),(       False,  'phb'))]
 for (test_variant, run_variant) in variants:
-  (bits, opt, static) = test_variant
   (tsan_debug, mode) = run_variant
   if not test_binaries.has_key(test_variant):
+    (bits, opt, static) = test_variant
     (test_binary, test_desc) = addBuildTestStep(f1, os, bits, opt, static)
     test_binaries[test_variant] = (test_binary, test_desc)
   addTestStep(f1, tsan_debug, mode, test_binary, test_desc)
@@ -210,7 +215,8 @@ f2.addStep(SVN(svnurl=svnurl, mode='copy'))
 
 # Build tsan + pin.
 f2.addStep(Compile(command=['make', '-C', 'tsan', '-j4',
-                            'GTEST_ROOT=', 'PIN_ROOT=c:/pin', 'w'],
+                            'GTEST_ROOT=', 'VALGRIND_ROOT=', 'PIN_ROOT=c:/pin',
+                            'w'],
                    description='building tsan with pin',
                    descriptionDone='build tsan with pin'))
 
@@ -223,7 +229,7 @@ base_name = 'demo_tests'
 for opt in [0, 1]:
   (test_binary, test_desc) = addBuildTestStep(f2, os, bits, opt, static, test_base_name=base_name)
   test_binaries[(os, bits, opt, static, base_name)] = (test_binary, test_desc)
-  addTestStep(f2, False, 'fast', test_binary, test_desc, frontend='pin')
+  addTestStep(f2, False, 'fast', test_binary, test_desc, frontend='pin', pin_root='c:/pin')
 
 b2 = {'name': 'buildbot-windows',
       'slavename': 'bot2name',
@@ -231,7 +237,54 @@ b2 = {'name': 'buildbot-windows',
       'factory': f2,
       }
 
-c['builders'] = [b1, b2]
+f2 = None
+
+### Linux + pin
+
+f3 = factory.BuildFactory()
+
+# Checkout sources.
+f3.addStep(SVN(svnurl=svnurl, mode='copy'))
+
+# Build tsan + pin.
+f3.addStep(Compile(command=['make', '-C', 'tsan', '-j4',
+                            'GTEST_ROOT=', 'VALGRIND_ROOT=',
+                            'PIN_ROOT=/home/build/nonconf/google3/third_party/pin/pin-2.6-27887',
+                            'ld'],
+                   description='building tsan with pin',
+                   descriptionDone='build tsan with pin'))
+
+# Run unit tests.
+test_binaries = {} # (bits, opt, static) -> (binary, desc)
+os = 'linux'
+base_name = 'demo_tests'
+#                  test binary | tsan + run parameters
+#             bits, opt, static,   tsan-debug,   mode
+variants = [((  64,   1, False),(        True, 'fast')),
+            ((  64,   1, False),(        True, 'slow')),
+            ((  64,   1, False),(        True,  'phb')),
+            ((  32,   1, False),(        True, 'slow')),
+            ((  64,   0, False),(        True, 'slow'))]
+for (test_variant, run_variant) in variants:
+  (tsan_debug, mode) = run_variant
+  if not test_binaries.has_key(test_variant):
+    (bits, opt, static) = test_variant
+    (test_binary, test_desc) = addBuildTestStep(f3, os, bits, opt, static, test_base_name=base_name)
+    test_binaries[test_variant] = (test_binary, test_desc)
+  addTestStep(f3, tsan_debug, mode, test_binary, test_desc, frontend='pin',
+              pin_root='/home/build/nonconf/google3/third_party/pin/pin-2.6-27887')
+
+
+b3 = {'name': 'buildbot-linux-pin',
+      'slavename': 'bot3name',
+      'builddir': 'full_linux_pin',
+      'factory': f3,
+      }
+
+f3 = None
+
+
+c['builders'] = [b1, b2, b3]
 
 
 ####### STATUS TARGETS
