Add windows_tests.cc to windows build.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1481 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -120,6 +120,7 @@ $(BIN)bigtest-$(BUILD)$(EXE): $(BIN)bigtest-$(BUILD).$(OBJ) ${DYNAMIC_ANNOTATION
 	${LD} $(LDFLAGS) $^ $(LIBS) $(LINKO)$@
 
 ifeq ($(OS), windows)
+$(BIN)racecheck_unittest-$(BUILD)$(EXE): $(BIN)windows_tests-$(BUILD).$(OBJ)
 $(GTEST_LIB):
 	cd $(GTEST_ROOT)/msvc && devenv /upgrade gtest.sln && devenv /build $(GTEST_BUILD) /project gtest gtest.sln
 else
