--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -1,5 +1,5 @@
 VALGRIND_ROOT=../third_party/valgrind
-VALGRIND_INST_ROOT=$(HOME)/tsan_inst
+VALGRIND_INST_ROOT=../tsan_inst
 STLPORT_ROOT=../third_party/stlport
 GTEST_ROOT=../third_party/googletest
 OFFLINE=0
