Fix binary suffixes lost in the previous commit.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1506 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -4,10 +4,11 @@ include ../common.mk
 CFLAGS=$(OPTFLAGS) $(ARCHFLAGS) $(EXTRA_CFLAGS)
 CXXFLAGS=$(OPTFLAGS) $(ARCHFLAGS) $(EXTRA_CXXFLAGS)
 LDFLAGS=$(LDOPT) $(ARCHFLAGS) $(STATICFLAGS)
-OS=   # linux, darwin
-ARCH= # x86, amd64
-OX=    # O0, O1, ...
-S=    # <empty>, -static
+
+# OS = linux, darwin, windows
+# ARCH= x86, amd64
+# OX = O0, O1, ...
+# S= <empty>, -static
 BUILD=${OS}-${ARCH}-${OX}${S}
 BIN=bin/
 
