Update buildmaster config.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1512 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -82,6 +82,8 @@ def addBuildTestStep(factory, os, bits, opt, static, test_base_name='racecheck_u
   if static:
     desc.append('static')
 
+  command.append('all')
+
   desc_common = test_base_name + '(' + ','.join(desc) + ')'
   print command
   factory.addStep(Compile(command = command,
@@ -91,7 +93,8 @@ def addBuildTestStep(factory, os, bits, opt, static, test_base_name='racecheck_u
 
 
 def addTestStep(factory, debug, mode, test_binary, test_desc,
-                frontend_binary=None, extra_args=[], frontend='valgrind', pin_root=None):
+                frontend_binary=None, extra_args=[], frontend='valgrind',
+                pin_root=None, timeout=1800):
   """Adds a step for running unit tests with tsan."""
   args = []
   env = {}
@@ -126,8 +129,12 @@ def addTestStep(factory, debug, mode, test_binary, test_desc,
   desc.append(mode)
   desc_common = 'tsan-' + frontend + '(' + ','.join(desc) + ')'
 
-  command = [frontend_binary] + extra_args + args + [test_binary]
+  command = []
+  if timeout:
+    command += ['alarm', '-l', str(timeout)]
+  command += [frontend_binary] + extra_args + args + [test_binary]
   print command
+
   factory.addStep(Test(command = command, env = env,
                        description = 'testing ' + desc_common + ' on ' + test_desc,
                        descriptionDone = 'test ' + desc_common + ' on ' + test_desc))
@@ -144,7 +151,8 @@ f1.addStep(ShellCommand(command='cd third_party && ./update_valgrind.sh && ' +
                         description='building valgrind',
                         descriptionDone='build valgrind'))
 f1.addStep(Compile(command=['make', '-C', 'tsan', '-j4', 'OFFLINE=',
-                            'GTEST_ROOT=', 'PIN_ROOT=', 'lo', 'ld'],
+                            'PIN_ROOT=',
+                            'lo', 'ld'],
                    description='building tsan',
                    descriptionDone='build tsan'))
 f1.addStep(ShellCommand(command=['make', '-C', 'tsan', 'install',
@@ -164,14 +172,13 @@ f1.addStep(ShellCommand(command='cd third_party && ' +
                         description='building 32-bit valgrind',
                         descriptionDone='build 32-bit valgrind'))
 f1.addStep(Compile(command=['make', '-C', 'tsan', '-j4', 'OFFLINE=',
-                            'GTEST_ROOT=', 'PIN_ROOT=', 'lo', 'ld'],
+                            'PIN_ROOT=', 'lo', 'ld'],
                    description='building 32-bit tsan',
                    descriptionDone='build 32-bit tsan'))
 f1.addStep(ShellCommand(command=['make', '-C', 'tsan', 'install',
                                  'VALGRIND_INST_ROOT=../out32'],
                         description='installing 32-bit tsan',
                         descriptionDone='install 32-bit tsan'))
-
 
 # Run unit tests.
 test_binaries = {} # (bits, opt, static) -> (binary, desc)
@@ -215,10 +222,15 @@ f2.addStep(SVN(svnurl=svnurl, mode='copy'))
 
 # Build tsan + pin.
 f2.addStep(Compile(command=['make', '-C', 'tsan', '-j4',
-                            'GTEST_ROOT=', 'VALGRIND_ROOT=', 'PIN_ROOT=c:/pin',
+                            'VALGRIND_ROOT=', 'PIN_ROOT=c:/pin',
                             'w'],
                    description='building tsan with pin',
                    descriptionDone='build tsan with pin'))
+
+# Run suppressions tests.
+f2.addStep(Test(command='tsan/bin/x86-windows-debug-suppressions_test.exe',
+                description='running suppresions tests',
+                descriptionDone='run suppresions tests'))
 
 # Run tests.
 test_binaries = {} # (os, bits, opt, static, name) -> (binary, desc)
@@ -229,7 +241,8 @@ base_name = 'demo_tests'
 for opt in [0, 1]:
   (test_binary, test_desc) = addBuildTestStep(f2, os, bits, opt, static, test_base_name=base_name)
   test_binaries[(os, bits, opt, static, base_name)] = (test_binary, test_desc)
-  addTestStep(f2, False, 'fast', test_binary, test_desc, frontend='pin', pin_root='c:/pin')
+  addTestStep(f2, False, 'fast', test_binary, test_desc, frontend='pin',
+              pin_root='c:/pin', timeout=None)
 
 b2 = {'name': 'buildbot-windows',
       'slavename': 'bot2name',
@@ -248,11 +261,19 @@ f3.addStep(SVN(svnurl=svnurl, mode='copy'))
 
 # Build tsan + pin.
 f3.addStep(Compile(command=['make', '-C', 'tsan', '-j4',
-                            'GTEST_ROOT=', 'VALGRIND_ROOT=',
+                            'VALGRIND_ROOT=',
                             'PIN_ROOT=/home/build/nonconf/google3/third_party/pin/pin-2.6-27887',
                             'ld'],
                    description='building tsan with pin',
                    descriptionDone='build tsan with pin'))
+
+# Run suppressions tests.
+f3.addStep(Test(command='tsan/bin/amd64-linux-debug-suppressions_test',
+                description='running amd64 suppresions tests',
+                descriptionDone='run amd64 suppresions tests'))
+f3.addStep(Test(command='tsan/bin/x86-linux-debug-suppressions_test',
+                description='running x86 suppresions tests',
+                descriptionDone='run x86 suppresions tests'))
 
 # Run unit tests.
 test_binaries = {} # (bits, opt, static) -> (binary, desc)
