--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -9,7 +9,8 @@ c = BuildmasterConfig = {}
 from buildbot.buildslave import BuildSlave
 c['slaves'] = [BuildSlave('bot1name', 'bot1pazzwd'),
                BuildSlave('bot2name', 'bot2pazzwd'),
-               BuildSlave('bot3name', 'bot3pazzwd')]
+               BuildSlave('bot3name', 'bot3pazzwd'),
+               BuildSlave('bot4name', 'bot4pazzwd')]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave('bot1name', 'bot1passwd', max_builds=2)]
@@ -40,7 +41,8 @@ c['schedulers'].append(Scheduler(name='all', branch=None,
                                  treeStableTimer=10,
                                  builderNames=['buildbot-linux',
                                                'buildbot-windows',
-                                               'buildbot-linux-pin']))
+                                               'buildbot-linux-pin',
+                                               'buildbot-mac']))
 
 
 ####### BUILDERS
@@ -305,7 +307,64 @@ b3 = {'name': 'buildbot-linux-pin',
 f3 = None
 
 
-c['builders'] = [b1, b2, b3]
+### Mac 10.5
+
+f4 = factory.BuildFactory()
+
+# Checkout sources.
+f4.addStep(SVN(svnurl=svnurl, mode='copy'))
+
+# Build valgrind+tsan and install them to out/.
+f4.addStep(ShellCommand(command='cd third_party && ./update_valgrind.sh && ' +
+                        './build_and_install_valgrind.sh `pwd`/../out',
+                        description='building valgrind',
+                        descriptionDone='build valgrind'))
+f4.addStep(Compile(command=['make', '-C', 'tsan', '-j4', 'OFFLINE=',
+                            'PIN_ROOT=',
+                            'm'],
+                   description='building tsan',
+                   descriptionDone='build tsan'))
+f4.addStep(ShellCommand(command=['make', '-C', 'tsan', 'install',
+                                 'VALGRIND_INST_ROOT=../out'],
+                        description='installing tsan',
+                        descriptionDone='install tsan'))
+
+# Test that mk-self-contained-tsan works. Output is unused.
+f4.addStep(ShellCommand(command=['tsan_binary/mk-self-contained-tsan.sh',
+                                 'out', 'tsan.sh'],
+                        description='packing self-contained tsan',
+                        descriptionDone='pack self-contained tsan'))
+
+# Run unit tests.
+test_binaries = {} # (bits, opt, static) -> (binary, desc)
+os = 'darwin'
+#                  test binary | tsan + run parameters
+#             bits, opt, static,   tsan-debug,   mode
+variants = [((  32,   1, False),(        True, 'fast')),
+            ((  32,   1, False),(        True, 'slow')),
+            ((  32,   1, False),(        True,  'phb')),
+            ((  32,   0, False),(        True, 'slow')),
+            ((  32,   1, False),(       False,  'phb'))]
+for (test_variant, run_variant) in variants:
+  (tsan_debug, mode) = run_variant
+  if not test_binaries.has_key(test_variant):
+    (bits, opt, static) = test_variant
+    (test_binary, test_desc) = addBuildTestStep(f4, os, bits, opt, static)
+    test_binaries[test_variant] = (test_binary, test_desc)
+  addTestStep(f4, tsan_debug, mode, test_binary, test_desc)
+
+
+b4 = {'name': 'buildbot-mac',
+      'slavename': 'bot4name',
+      'builddir': 'full_mac',
+      'factory': f4,
+      }
+
+f4 = None # foolproof
+
+#######
+
+c['builders'] = [b1, b2, b3, b4]
 
 
 ####### STATUS TARGETS
