--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -237,14 +237,23 @@ f2.addStep(Test(command='tsan/bin/x86-windows-debug-suppressions_test.exe',
 # Run tests.
 test_binaries = {} # (os, bits, opt, static, name) -> (binary, desc)
 os = 'windows'
-bits = '32'
-static = False
-base_name = 'demo_tests'
-for opt in [0, 1]:
-  (test_binary, test_desc) = addBuildTestStep(f2, os, bits, opt, static, test_base_name=base_name)
-  test_binaries[(os, bits, opt, static, base_name)] = (test_binary, test_desc)
-  addTestStep(f2, False, 'fast', test_binary, test_desc, frontend='pin',
+#                  test binary | tsan + run parameters
+#             bits, opt, static,   tsan-debug,   mode
+variants = [((  32,   1, False),(        True, 'fast')),
+            ((  32,   1, False),(        True, 'slow')),
+            ((  32,   1, False),(        True,  'phb')),
+            ((  32,   0, False),(        True, 'slow')),
+            ((  32,   1, False),(       False,  'phb'))]
+for (test_variant, run_variant) in variants:
+  (tsan_debug, mode) = run_variant
+  if not test_binaries.has_key(test_variant):
+    (bits, opt, static) = test_variant
+    (test_binary, test_desc) = addBuildTestStep(f2, os, bits, opt, static)
+    test_binaries[test_variant] = (test_binary, test_desc)
+  addTestStep(f2, tsan_debug, mode, test_binary, test_desc, frontend='pin',
               pin_root='c:/pin', timeout=None)
+
+
 
 b2 = {'name': 'buildbot-windows',
       'slavename': 'bot2name',
