clobber old tsan binaries when installing new ones
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1518 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -143,6 +143,7 @@ m32d:
 	$(MAKE) all OS=darwin ARCH=x86 DEBUG=1
 
 install:
+	rm -fv $(VALGRIND_INST_ROOT)/lib/valgrind/*tsan*
 	cp bin/tsan* bin/vgpreload_tsan* $(VALGRIND_INST_ROOT)/lib/valgrind
 
 
