test for rep-prefixed insns; works with valgrind, broken with pin
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1586 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,8 +1,10 @@
 SVN_ROOT=..
 include ../common.mk
 
-CFLAGS=$(OPTFLAGS) $(ARCHFLAGS) $(EXTRA_CFLAGS)
-CXXFLAGS=$(OPTFLAGS) $(ARCHFLAGS) $(EXTRA_CXXFLAGS)
+DEFINES=-DOS_$(OS) -DARCH_$(ARCH)
+
+CFLAGS=$(OPTFLAGS) $(ARCHFLAGS) $(EXTRA_CFLAGS) $(DEFINES)
+CXXFLAGS=$(OPTFLAGS) $(ARCHFLAGS) $(EXTRA_CXXFLAGS) $(DEFINES)
 LDFLAGS=$(LDOPT) $(ARCHFLAGS) $(STATICFLAGS)
 
 # OS = linux, darwin, windows
