--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -189,7 +189,7 @@ bin:
 	mkdir -p bin
 
 TS_HEADERS=thread_sanitizer.h ts_util.h suppressions.h ts_replace.h ts_heap_info.h \
-	   ts_simple_cache.h ts_stats.h ts_lock.h
+	   ts_simple_cache.h ts_stats.h ts_lock.h ts_events.h
 ifeq ($(DEBUG), 0)
   # in optimized build, we include thread_sanitizer.cc into other files.
   TS_HEADERS+=thread_sanitizer.cc
