use mk-self-contained-valgrind.sh instead of mk-self-contained-tsan.sh in Makefile
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1644 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -147,7 +147,7 @@ install: bin
 	cp bin/tsan* bin/vgpreload_tsan* $(VALGRIND_INST_ROOT)/lib/valgrind
 
 self-contained:
-	../tsan_binary/mk-self-contained-tsan.sh  $(VALGRIND_INST_ROOT) bin/tsan-$(OS)-self-contained.sh
+	../tsan_binary/mk-self-contained-valgrind.sh $(VALGRIND_INST_ROOT)  tsan bin/tsan-$(OS)-self-contained.sh
 
 
 ifeq ($(VALGRIND_ROOT), )
