Update buildbot master config.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1653 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -62,12 +62,14 @@ def unitTestBinary(os, bits, opt, static, test_base_name='racecheck_unittest'):
   name = 'unittest/bin/%s-%s-%s-O%d' % (test_base_name, os, arch, opt)
   if static:
     name += '-static'
+  if os == 'windows':
+    name += '.exe'
   return name
 
-def addBuildTestStep(factory, os, bits, opt, static, test_base_name='racecheck_unittest'):
+def addBuildTestStep(factory, os, bits, opt, static):
   """Adds a step for building a unit test binary."""
   desc = []
-  command = ['make', '-C', 'unittest']
+  command = ['make', '-C', 'unittest', 'all']
   command.append('OS=%s' % os)
   desc.append(os)
 
@@ -84,19 +86,17 @@ def addBuildTestStep(factory, os, bits, opt, static, test_base_name='racecheck_u
   if static:
     desc.append('static')
 
-  command.append('all')
-
-  desc_common = test_base_name + '(' + ','.join(desc) + ')'
+  desc_common = '(' + ','.join(desc) + ')'
   print command
   factory.addStep(Compile(command = command,
-                          description = 'building ' + desc_common,
-                          descriptionDone = 'build ' + desc_common))
-  return (unitTestBinary(os, bits, opt, static, test_base_name=test_base_name), desc_common)
+                          description = 'building unittests ' + desc_common,
+                          descriptionDone = 'build unittests ' + desc_common))
+  return desc_common
 
 
 def addTestStep(factory, debug, mode, test_binary, test_desc,
                 frontend_binary=None, extra_args=[], frontend='valgrind',
-                pin_root=None, timeout=1800):
+                pin_root=None, timeout=1800, test_base_name='racecheck_unittest'):
   """Adds a step for running unit tests with tsan."""
   args = []
   env = {}
@@ -128,6 +128,8 @@ def addTestStep(factory, debug, mode, test_binary, test_desc,
   else: # mode == 'slow'
     args.extend(['--fast-mode=no', '--pure-happens-before=no', '--ignore-in-dtor=no'])
 
+  args.append('--suppressions=unittest/racecheck_unittest.supp')
+
   desc.append(mode)
   desc_common = 'tsan-' + frontend + '(' + ','.join(desc) + ')'
 
@@ -138,9 +140,23 @@ def addTestStep(factory, debug, mode, test_binary, test_desc,
   print command
 
   factory.addStep(Test(command = command, env = env,
-                       description = 'testing ' + desc_common + ' on ' + test_desc,
-                       descriptionDone = 'test ' + desc_common + ' on ' + test_desc))
+                       description = 'testing ' + desc_common + ' on ' + test_base_name + test_desc,
+                       descriptionDone = 'test ' + desc_common + ' on ' + test_base_name + test_desc))
 
+
+def runAllTests(factory, variants, os):
+  test_variants = {} # (bits, opt, static, base_name) -> (binary, desc)
+  for (test_variant, run_variant) in variants:
+    (tsan_debug, mode, base_name) = run_variant
+    if test_variants.has_key(test_variant):
+      test_desc = test_variants[test_variant]
+    else:
+      (bits, opt, static) = test_variant
+      test_desc = addBuildTestStep(factory, os, bits, opt, static)
+      test_variants[test_variant] = test_desc
+    test_binary = unitTestBinary(os, bits, opt, static, test_base_name=base_name)
+    addTestStep(factory, tsan_debug, mode, test_binary, test_desc, frontend='pin',
+                pin_root='/home/build/nonconf/google3/third_party/pin/pin-2.6-27887')
 
 f1 = factory.BuildFactory()
 
@@ -197,13 +213,15 @@ for (test_variant, run_variant) in variants:
   (tsan_debug, mode) = run_variant
   if not test_binaries.has_key(test_variant):
     (bits, opt, static) = test_variant
-    (test_binary, test_desc) = addBuildTestStep(f1, os, bits, opt, static)
-    test_binaries[test_variant] = (test_binary, test_desc)
-  addTestStep(f1, tsan_debug, mode, test_binary, test_desc)
+    test_desc = addBuildTestStep(f1, os, bits, opt, static)
+    test_binaries[test_variant] = test_desc
+  test_binary = unitTestBinary(os, bits, opt, static)
+  addTestStep(f1, tsan_debug, mode, test_binary, test_desc, extra_args=["--error_exitcode=1"])
 
 
 # Run unit tests with 32-bit valgrind.
-(test_binary, test_desc) = test_binaries[(32, 1, False)]
+test_desc = test_binaries[(32, 1, False)]
+test_binary = unitTestBinary(os, 32, 1, False)
 addTestStep(f1, False, 'fast', test_binary, test_desc + '(32-bit valgrind)',
             frontend_binary='out32/bin/valgrind')
 
@@ -248,8 +266,9 @@ for (test_variant, run_variant) in variants:
   (tsan_debug, mode) = run_variant
   if not test_binaries.has_key(test_variant):
     (bits, opt, static) = test_variant
-    (test_binary, test_desc) = addBuildTestStep(f2, os, bits, opt, static)
-    test_binaries[test_variant] = (test_binary, test_desc)
+    test_desc = addBuildTestStep(f2, os, bits, opt, static)
+    test_binaries[test_variant] = test_desc
+  test_binary = unitTestBinary(os, bits, opt, static)
   addTestStep(f2, tsan_debug, mode, test_binary, test_desc, frontend='pin',
               pin_root='c:/pin', timeout=None)
 
@@ -287,24 +306,13 @@ f3.addStep(Test(command='tsan/bin/x86-linux-debug-suppressions_test',
                 descriptionDone='run x86 suppresions tests'))
 
 # Run unit tests.
-test_binaries = {} # (bits, opt, static) -> (binary, desc)
-os = 'linux'
-base_name = 'demo_tests'
-#                  test binary | tsan + run parameters
-#             bits, opt, static,   tsan-debug,   mode
-variants = [((  64,   1, False),(        True, 'fast')),
-            ((  64,   1, False),(        True, 'slow')),
-            ((  64,   1, False),(        True,  'phb')),
-            ((  32,   1, False),(        True, 'slow')),
-            ((  64,   0, False),(        True, 'slow'))]
-for (test_variant, run_variant) in variants:
-  (tsan_debug, mode) = run_variant
-  if not test_binaries.has_key(test_variant):
-    (bits, opt, static) = test_variant
-    (test_binary, test_desc) = addBuildTestStep(f3, os, bits, opt, static, test_base_name=base_name)
-    test_binaries[test_variant] = (test_binary, test_desc)
-  addTestStep(f3, tsan_debug, mode, test_binary, test_desc, frontend='pin',
-              pin_root='/home/build/nonconf/google3/third_party/pin/pin-2.6-27887')
+variants = [((  64,   1, False),(        True, 'fast', 'racecheck_unittest')),
+            ((  64,   1, False),(        True, 'slow', 'racecheck_unittest')),
+            ((  64,   1, False),(        True,  'phb', 'racecheck_unittest')),
+            ((  32,   1, False),(        True, 'slow', 'racecheck_unittest')),
+            ((  64,   0, False),(        True, 'slow', 'racecheck_unittest')),
+            ((  64,   1, False),(        True, 'slow',         'demo_tests'))]
+runAllTests(f3, variants, 'linux')
 
 
 b3 = {'name': 'buildbot-linux-pin',
@@ -358,8 +366,9 @@ for (test_variant, run_variant) in variants:
   (tsan_debug, mode) = run_variant
   if not test_binaries.has_key(test_variant):
     (bits, opt, static) = test_variant
-    (test_binary, test_desc) = addBuildTestStep(f4, os, bits, opt, static)
-    test_binaries[test_variant] = (test_binary, test_desc)
+    test_desc = addBuildTestStep(f4, os, bits, opt, static)
+    test_binaries[test_variant] = test_desc
+  test_binary = unitTestBinary(os, bits, opt, static)
   addTestStep(f4, tsan_debug, mode, test_binary, test_desc)
 
 
