--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -156,7 +156,7 @@ def runAllTests(factory, variants, os):
       test_variants[test_variant] = test_desc
     test_binary = unitTestBinary(os, bits, opt, static, test_base_name=base_name)
     addTestStep(factory, tsan_debug, mode, test_binary, test_desc, frontend='pin',
-                pin_root='/home/build/nonconf/google3/third_party/pin/pin-2.6-27887')
+                pin_root='/usr/local/google/pin')
 
 f1 = factory.BuildFactory()
 
@@ -292,7 +292,7 @@ f3.addStep(SVN(svnurl=svnurl, mode='copy'))
 # Build tsan + pin.
 f3.addStep(Compile(command=['make', '-C', 'tsan', '-j4',
                             'VALGRIND_ROOT=',
-                            'PIN_ROOT=/home/build/nonconf/google3/third_party/pin/pin-2.6-27887',
+                            'PIN_ROOT=/usr/local/google/pin',
                             'ld'],
                    description='building tsan with pin',
                    descriptionDone='build tsan with pin'))
