--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -22,11 +22,13 @@ c['slavePortnum'] = 9989
 
 ####### CHANGESOURCES
 
-svnurl='http://data-race-test.googlecode.com/svn/trunk'
+settings = {
+    'svnurl':  'http://data-race-test.googlecode.com/svn/trunk'
+}
 
 from buildbot.changes.svnpoller import SVNPoller
 svn_poller = SVNPoller(
-                   svnurl=svnurl,
+                   svnurl=settings['svnurl'],
                    pollinterval=10*60, # seconds
                    histmax=10,
                    svnbin='/usr/bin/svn')
@@ -47,342 +49,17 @@ c['schedulers'].append(Scheduler(name='all', branch=None,
 
 ####### BUILDERS
 
-from buildbot.process import factory
-from buildbot.steps.source import SVN
-from buildbot.steps.shell import Compile
-from buildbot.steps.shell import Test
-from buildbot.steps.shell import ShellCommand
+import builder_linux
+import builder_windows
+import builder_linux_pin
+import builder_mac
 
-
-def unitTestBinary(os, bits, opt, static, test_base_name='racecheck_unittest'):
-  if bits == 64:
-    arch = 'amd64'
-  else:
-    arch = 'x86'
-  name = 'unittest/bin/%s-%s-%s-O%d' % (test_base_name, os, arch, opt)
-  if static:
-    name += '-static'
-  if os == 'windows':
-    name += '.exe'
-  return name
-
-def addBuildTestStep(factory, os, bits, opt, static):
-  """Adds a step for building a unit test binary."""
-  desc = []
-  command = ['make', '-C', 'unittest', 'all']
-  command.append('OS=%s' % os)
-  desc.append(os)
-
-  if bits == 64:
-    command.append('ARCH=amd64')
-  else:
-    command.append('ARCH=x86')
-  desc.append(str(bits))
-
-  command.append('OPT=%d' % opt)
-  desc.append('O%d' % opt)
-
-  command.append('STATIC=%d' % static)
-  if static:
-    desc.append('static')
-
-  desc_common = '(' + ','.join(desc) + ')'
-  print command
-  factory.addStep(Compile(command = command,
-                          description = 'building unittests ' + desc_common,
-                          descriptionDone = 'build unittests ' + desc_common))
-  return desc_common
-
-
-def addTestStep(factory, debug, mode, test_binary, test_desc,
-                frontend_binary=None, extra_args=[], frontend='valgrind',
-                pin_root=None, timeout=1800, test_base_name='racecheck_unittest'):
-  """Adds a step for running unit tests with tsan."""
-  args = []
-  env = {}
-  desc = []
-
-  if frontend == 'valgrind':
-    frontend_binary = frontend_binary or 'out/bin/valgrind'
-  elif frontend == 'pin':
-    frontend_binary = frontend_binary or 'tsan/tsan_pin.sh'
-
-  if frontend == 'valgrind':
-    tool_arg = '--tool=tsan'
-    if debug:
-      tool_arg += '-debug'
-      desc.append('debug')
-    args.append(tool_arg)
-
-  if frontend == 'pin':
-    if pin_root:
-      env['PIN_ROOT'] = pin_root
-    env['TS_ROOT'] = 'tsan'
-
-  if mode == 'phb':
-    env['TSAN_PURE_HAPPENS_BEFORE'] = '1'
-    args.extend(['--pure-happens-before=yes', '--ignore-in-dtor=no'])
-  elif mode == 'fast':
-    env['TSAN_FAST_MODE'] = '1'
-    args.extend(['--fast-mode=yes', '--pure-happens-before=no', '--ignore-in-dtor=yes'])
-  else: # mode == 'slow'
-    args.extend(['--fast-mode=no', '--pure-happens-before=no', '--ignore-in-dtor=no'])
-
-  args.append('--suppressions=unittest/racecheck_unittest.supp')
-
-  desc.append(mode)
-  desc_common = 'tsan-' + frontend + '(' + ','.join(desc) + ')'
-
-  command = []
-  if timeout:
-    command += ['alarm', '-l', str(timeout)]
-  command += [frontend_binary] + extra_args + args + [test_binary]
-  print command
-
-  factory.addStep(Test(command = command, env = env,
-                       description = 'testing ' + desc_common + ' on ' + test_base_name + test_desc,
-                       descriptionDone = 'test ' + desc_common + ' on ' + test_base_name + test_desc))
-
-
-def runAllTests(factory, variants, os):
-  test_variants = {} # (bits, opt, static, base_name) -> (binary, desc)
-  for (test_variant, run_variant) in variants:
-    (tsan_debug, mode, base_name) = run_variant
-    if test_variants.has_key(test_variant):
-      test_desc = test_variants[test_variant]
-    else:
-      (bits, opt, static) = test_variant
-      test_desc = addBuildTestStep(factory, os, bits, opt, static)
-      test_variants[test_variant] = test_desc
-    test_binary = unitTestBinary(os, bits, opt, static, test_base_name=base_name)
-    addTestStep(factory, tsan_debug, mode, test_binary, test_desc, frontend='pin',
-                pin_root='/usr/local/google/pin')
-
-f1 = factory.BuildFactory()
-
-# Checkout sources.
-f1.addStep(SVN(svnurl=svnurl, mode='copy'))
-
-# Build valgrind+tsan and install them to out/.
-f1.addStep(ShellCommand(command='cd third_party && ./update_valgrind.sh && ' +
-                        './build_and_install_valgrind.sh `pwd`/../out',
-                        description='building valgrind',
-                        descriptionDone='build valgrind'))
-f1.addStep(Compile(command=['make', '-C', 'tsan', '-j4', 'OFFLINE=',
-                            'PIN_ROOT=',
-                            'lo', 'ld'],
-                   description='building tsan',
-                   descriptionDone='build tsan'))
-f1.addStep(ShellCommand(command=['make', '-C', 'tsan', 'install',
-                                 'VALGRIND_INST_ROOT=../out'],
-                        description='installing tsan',
-                        descriptionDone='install tsan'))
-
-# Test that mk-self-contained-tsan works. Output is unused.
-f1.addStep(ShellCommand(command=['tsan_binary/mk-self-contained-tsan.sh',
-                                 'out', 'tsan.sh'],
-                        description='packing self-contained tsan',
-                        descriptionDone='pack self-contained tsan'))
-
-# Build 32-bit valgrind+tsan and install them to out32/.
-f1.addStep(ShellCommand(command='cd third_party && ' +
-                        './build_and_install_valgrind.sh `pwd`/../out32 --enable-only32bit',
-                        description='building 32-bit valgrind',
-                        descriptionDone='build 32-bit valgrind'))
-f1.addStep(Compile(command=['make', '-C', 'tsan', '-j4', 'OFFLINE=',
-                            'PIN_ROOT=', 'lo', 'ld'],
-                   description='building 32-bit tsan',
-                   descriptionDone='build 32-bit tsan'))
-f1.addStep(ShellCommand(command=['make', '-C', 'tsan', 'install',
-                                 'VALGRIND_INST_ROOT=../out32'],
-                        description='installing 32-bit tsan',
-                        descriptionDone='install 32-bit tsan'))
-
-# Run unit tests.
-test_binaries = {} # (bits, opt, static) -> (binary, desc)
-os = 'linux'
-#                  test binary | tsan + run parameters
-#             bits, opt, static,   tsan-debug,   mode
-variants = [((  64,   1, False),(        True, 'fast')),
-            ((  64,   1, False),(        True, 'slow')),
-            ((  64,   1, False),(        True,  'phb')),
-            ((  32,   1, False),(        True, 'slow')),
-            ((  64,   0, False),(        True, 'slow')),
-            ((  64,   1, False),(       False,  'phb'))]
-for (test_variant, run_variant) in variants:
-  (tsan_debug, mode) = run_variant
-  if not test_binaries.has_key(test_variant):
-    (bits, opt, static) = test_variant
-    test_desc = addBuildTestStep(f1, os, bits, opt, static)
-    test_binaries[test_variant] = test_desc
-  test_binary = unitTestBinary(os, bits, opt, static)
-  addTestStep(f1, tsan_debug, mode, test_binary, test_desc, extra_args=["--error_exitcode=1"])
-
-
-# Run unit tests with 32-bit valgrind.
-test_desc = test_binaries[(32, 1, False)]
-test_binary = unitTestBinary(os, 32, 1, False)
-addTestStep(f1, False, 'fast', test_binary, test_desc + '(32-bit valgrind)',
-            frontend_binary='out32/bin/valgrind')
-
-b1 = {'name': 'buildbot-linux',
-      'slavename': 'bot1name',
-      'builddir': 'full',
-      'factory': f1,
-      }
-
-f1 = None # foolproof
-
-### Windows
-
-f2 = factory.BuildFactory()
-
-# Checkout sources.
-f2.addStep(SVN(svnurl=svnurl, mode='copy'))
-
-# Build tsan + pin.
-f2.addStep(Compile(command=['make', '-C', 'tsan', '-j4',
-                            'VALGRIND_ROOT=', 'PIN_ROOT=c:/pin',
-                            'w'],
-                   description='building tsan with pin',
-                   descriptionDone='build tsan with pin'))
-
-# Run suppressions tests.
-f2.addStep(Test(command='tsan/bin/x86-windows-debug-suppressions_test.exe',
-                description='running suppresions tests',
-                descriptionDone='run suppresions tests'))
-
-# Run tests.
-test_binaries = {} # (os, bits, opt, static, name) -> (binary, desc)
-os = 'windows'
-#                  test binary | tsan + run parameters
-#             bits, opt, static,   tsan-debug,   mode
-variants = [((  32,   1, False),(        True, 'fast')),
-            ((  32,   1, False),(        True, 'slow')),
-            ((  32,   1, False),(        True,  'phb')),
-            ((  32,   0, False),(        True, 'slow')),
-            ((  32,   1, False),(       False,  'phb'))]
-for (test_variant, run_variant) in variants:
-  (tsan_debug, mode) = run_variant
-  if not test_binaries.has_key(test_variant):
-    (bits, opt, static) = test_variant
-    test_desc = addBuildTestStep(f2, os, bits, opt, static)
-    test_binaries[test_variant] = test_desc
-  test_binary = unitTestBinary(os, bits, opt, static)
-  addTestStep(f2, tsan_debug, mode, test_binary, test_desc, frontend='pin',
-              pin_root='c:/pin', timeout=None)
-
-
-
-b2 = {'name': 'buildbot-windows',
-      'slavename': 'bot2name',
-      'builddir': 'full_win',
-      'factory': f2,
-      }
-
-f2 = None
-
-### Linux + pin
-
-f3 = factory.BuildFactory()
-
-# Checkout sources.
-f3.addStep(SVN(svnurl=svnurl, mode='copy'))
-
-# Build tsan + pin.
-f3.addStep(Compile(command=['make', '-C', 'tsan', '-j4',
-                            'VALGRIND_ROOT=',
-                            'PIN_ROOT=/usr/local/google/pin',
-                            'ld'],
-                   description='building tsan with pin',
-                   descriptionDone='build tsan with pin'))
-
-# Run suppressions tests.
-f3.addStep(Test(command='tsan/bin/amd64-linux-debug-suppressions_test',
-                description='running amd64 suppresions tests',
-                descriptionDone='run amd64 suppresions tests'))
-f3.addStep(Test(command='tsan/bin/x86-linux-debug-suppressions_test',
-                description='running x86 suppresions tests',
-                descriptionDone='run x86 suppresions tests'))
-
-# Run unit tests.
-variants = [((  64,   1, False),(        True, 'fast', 'racecheck_unittest')),
-            ((  64,   1, False),(        True, 'slow', 'racecheck_unittest')),
-            ((  64,   1, False),(        True,  'phb', 'racecheck_unittest')),
-            ((  32,   1, False),(        True, 'slow', 'racecheck_unittest')),
-            ((  64,   0, False),(        True, 'slow', 'racecheck_unittest')),
-            ((  64,   1, False),(        True, 'slow',         'demo_tests'))]
-runAllTests(f3, variants, 'linux')
-
-
-b3 = {'name': 'buildbot-linux-pin',
-      'slavename': 'bot3name',
-      'builddir': 'full_linux_pin',
-      'factory': f3,
-      }
-
-f3 = None
-
-
-### Mac 10.5
-
-f4 = factory.BuildFactory()
-
-# Checkout sources.
-f4.addStep(SVN(svnurl=svnurl, mode='copy'))
-
-# Build valgrind+tsan and install them to out/.
-f4.addStep(ShellCommand(command='cd third_party && ./update_valgrind.sh && ' +
-                        './build_and_install_valgrind.sh `pwd`/../out',
-                        description='building valgrind',
-                        descriptionDone='build valgrind'))
-f4.addStep(Compile(command=['make', '-C', 'tsan', '-j4', 'OFFLINE=',
-                            'PIN_ROOT=',
-                            'm'],
-                   description='building tsan',
-                   descriptionDone='build tsan'))
-f4.addStep(ShellCommand(command=['make', '-C', 'tsan', 'install',
-                                 'VALGRIND_INST_ROOT=../out'],
-                        description='installing tsan',
-                        descriptionDone='install tsan'))
-
-# Test that mk-self-contained-tsan works. Output is unused.
-f4.addStep(ShellCommand(command=['tsan_binary/mk-self-contained-tsan.sh',
-                                 'out', 'tsan.sh'],
-                        description='packing self-contained tsan',
-                        descriptionDone='pack self-contained tsan'))
-
-# Run unit tests.
-test_binaries = {} # (bits, opt, static) -> (binary, desc)
-os = 'darwin'
-#                  test binary | tsan + run parameters
-#             bits, opt, static,   tsan-debug,   mode
-variants = [((  32,   1, False),(        True, 'fast')),
-            ((  32,   1, False),(        True, 'slow')),
-            ((  32,   1, False),(        True,  'phb')),
-            ((  32,   0, False),(        True, 'slow')),
-            ((  32,   1, False),(       False,  'phb'))]
-for (test_variant, run_variant) in variants:
-  (tsan_debug, mode) = run_variant
-  if not test_binaries.has_key(test_variant):
-    (bits, opt, static) = test_variant
-    test_desc = addBuildTestStep(f4, os, bits, opt, static)
-    test_binaries[test_variant] = test_desc
-  test_binary = unitTestBinary(os, bits, opt, static)
-  addTestStep(f4, tsan_debug, mode, test_binary, test_desc)
-
-
-b4 = {'name': 'buildbot-mac',
-      'slavename': 'bot4name',
-      'builddir': 'full_mac',
-      'factory': f4,
-      }
-
-f4 = None # foolproof
-
-#######
-
-c['builders'] = [b1, b2, b3, b4]
+c['builders'] = [
+    builder_linux.generate(settings),
+    builder_windows.generate(settings),
+    builder_linux_pin.generate(settings),
+    builder_mac.generate(settings),
+]
 
 
 ####### STATUS TARGETS
