--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -49,17 +49,23 @@ c['schedulers'].append(Scheduler(name='all', branch=None,
 
 ####### BUILDERS
 
+# reload the common module
+import common
+reload(common)
+
 import builder_linux
 import builder_windows
 import builder_linux_pin
 import builder_mac
 
-c['builders'] = [
-    builder_linux.generate(settings),
-    builder_windows.generate(settings),
-    builder_linux_pin.generate(settings),
-    builder_mac.generate(settings),
-]
+c['builders'] = []
+
+for module in [builder_linux,
+               builder_windows,
+               builder_linux_pin,
+               builder_mac]:
+  reload(module)
+  c['builders'].append(module.generate(settings))
 
 
 ####### STATUS TARGETS
