--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -10,7 +10,8 @@ from buildbot.buildslave import BuildSlave
 c['slaves'] = [BuildSlave('bot1name', 'bot1pazzwd'),
                BuildSlave('bot2name', 'bot2pazzwd'),
                BuildSlave('bot3name', 'bot3pazzwd'),
-               BuildSlave('bot4name', 'bot4pazzwd')]
+               BuildSlave('bot4name', 'bot4pazzwd'),
+               BuildSlave('bot5name', 'bot5pazzwd')]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave('bot1name', 'bot1passwd', max_builds=2)]
@@ -54,6 +55,7 @@ import common
 reload(common)
 
 import builder_linux
+import builder_linux_small
 import builder_windows
 import builder_linux_pin
 import builder_mac
@@ -61,6 +63,7 @@ import builder_mac
 c['builders'] = []
 
 for module in [builder_linux,
+               builder_linux_small,
                builder_windows,
                builder_linux_pin,
                builder_mac]:
