--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -11,7 +11,8 @@ c['slaves'] = [BuildSlave('bot1name', 'bot1pazzwd'),
                BuildSlave('bot2name', 'bot2pazzwd'),
                BuildSlave('bot3name', 'bot3pazzwd'),
                BuildSlave('bot4name', 'bot4pazzwd'),
-               BuildSlave('bot5name', 'bot5pazzwd')]
+               BuildSlave('bot5name', 'bot5pazzwd'),
+               BuildSlave('bot6name', 'bot6pazzwd')]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave('bot1name', 'bot1passwd', max_builds=2)]
@@ -36,17 +37,6 @@ svn_poller = SVNPoller(
 c['sources'] = [ svn_poller ]
 
 
-####### SCHEDULERS
-
-from buildbot.scheduler import Scheduler
-c['schedulers'] = []
-c['schedulers'].append(Scheduler(name='all', branch=None,
-                                 treeStableTimer=10,
-                                 builderNames=['buildbot-linux',
-                                               'buildbot-windows',
-                                               'buildbot-linux-pin',
-                                               'buildbot-mac']))
-
 
 ####### BUILDERS
 
@@ -59,6 +49,7 @@ import builder_linux_small
 import builder_windows
 import builder_linux_pin
 import builder_mac
+import builder_experimental
 
 c['builders'] = []
 
@@ -66,9 +57,21 @@ for module in [builder_linux,
                builder_linux_small,
                builder_windows,
                builder_linux_pin,
-               builder_mac]:
+               builder_mac,
+               builder_experimental]:
   reload(module)
   c['builders'].append(module.generate(settings))
+
+
+####### SCHEDULERS
+
+from buildbot.scheduler import Scheduler
+
+builderNames = [b['name'] for b in c['builders']]
+c['schedulers'] = []
+c['schedulers'].append(Scheduler(name='all', branch=None,
+                                 treeStableTimer=10,
+                                 builderNames=builderNames))
 
 
 ####### STATUS TARGETS
@@ -95,4 +98,4 @@ c['status'].append(html.WebStatus(http_port=8010,allowForce=True))
 
 c['projectName'] = 'ThreadSanitizer'
 c['projectURL'] = 'http://code.google.com/p/data-race-test'
-c['buildbotURL'] = 'http://kcc-box.eem:8010/'
+c['buildbotURL'] = 'http://kcc-box.eem:8010/waterfall'
